# voicecal-demo

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Makefile  PLAN.md  README.md  demo-script.md  package.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/scripts/: auth.py  rag_eval.py
backend/src/: sessions.db-shm  sessions.db-wal
backend/src/voicecal/: agent.py  app.py  calendar.py  calendar_provider.py  errors.py  eval.py  guardrails.py  intent_classifier.py  llm_use_guardrails.py  rag.py  settings.py  tools.py  voice.py
backend/src/voicecal/agent/: __init__.py  runner.py  session_compaction.py  tool_bounds.py  tools.py
backend/src/voicecal/api/: __init__.py  dependencies.py  main.py
backend/src/voicecal/config/: __init__.py  settings.py
backend/src/voicecal/core/: __init__.py  errors.py
backend/src/voicecal/eval/: __init__.py  __main__.py  harness.py
backend/src/voicecal/integrations/: __init__.py  clerk_jwt.py  google_calendar.py
backend/src/voicecal/providers/: __init__.py  calendar.py
backend/src/voicecal/rag/: __init__.py  service.py
backend/src/voicecal/structured/: __init__.py  generate.py  schemas.py
backend/src/voicecal/voice/: __init__.py  tts_stt.py
backend/tests/: conftest.py  test_api.py  test_intent_classifier.py  test_llm_use_guardrails.py  test_session_compaction.py  test_tools.py
eval/: golden.jsonl  rag.http
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
infra/: .gitignore  backend.tf  frontend.tf  lambda.tf  outputs.tf  (+3 more)
(+59 files in other folders)
